@@ -1,10 +1,14 @@
+FROM gradle:7.0.2-jdk8 AS build
+COPY --chown=gradle:gradle . /home/gradle/src
+WORKDIR /home/gradle/src
+RUN gradle 
 
-# # Prepare runtime.
-# FROM openjdk:8-jdk-alpine
-# # RUN addgroup -S spring && adduser -S spring -G spring
-# # USER spring:spring
-# RUN ./gradlew bootJar
-# VOLUME /tmp
-# COPY target/*.jar app.jar
-# EXPOSE 8080
-# ENTRYPOINT ["java","-jar","/app.jar"]
+FROM openjdk:8-jre-slim
+
+EXPOSE 8080
+
+RUN mkdir /app
+
+COPY --from=build /home/gradle/src/build/libs/*.jar /app/app.jar
+
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/app.jar"]
